--- a/app/components/layout_component.html.erb
+++ b/app/components/layout_component.html.erb
@@ -1,1 +1,12 @@
-<div>Add Layout template here</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>SsgMock</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  </head>
+
+  <body>
+    <%= content %>
+  </body>
+</html>
